gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gw-deploy
  name: gw-deploy-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: gw-deploy
