gateway/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-nginx
spec:
  gatewayClassName: nginx 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
